# platform

./: .bazelrc  .gitignore  .pnpmrc.json  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCORD.md  GOVERNANCE.md  MAINTAINERS.md  README.md  RELEASE_NOTES.md  SECURITY.md  VERSION  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-platform  bazel-testlogs  biome.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  dev-desktop.yml  docker-publish.yml  docs-deploy.yml  e2e-nightly.yml  release.yml  security.yml
assets/social/: README.md
docs/: demo-script.md  docusaurus.config.ts  hackernews-launch-post.md  package.json
docs/blog/: 2026-05-27-introducing-otelverse.md  2026-05-28-introducing-otelverse.md
docs/docs/: architecture.md  getting-started.md
docs/src/pages/: index.tsx
libs/api-hooks/: jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
libs/api-hooks/src/: client.ts  index.ts  queries.ts  types.ts
libs/api-hooks/src/hooks/: index.ts  useAlerts.ts  useChaos.ts  useLogs.ts  useMetrics.ts  useOptimizer.ts  usePipelines.ts  useSessionReplay.ts  useTrace.ts  useTraces.ts  useUQL.ts
libs/api-hooks/src/hooks/__tests__/: useAlerts.test.tsx  usePipelines.test.tsx  useTraces.test.tsx  useUQL.test.tsx
libs/edge-common/: Cargo.toml
libs/edge-common/src/: lib.rs
libs/ui-kit/: .gitignore  BUILD.bazel  README.md  design-tokens.config.json  jest.config.js  jest_runner.sh  package.json  pnpm-lock.yaml  run_tests.sh  tailwind.config.ts
libs/ui-kit/.storybook/: main.ts  preview.ts
libs/ui-kit/design-tokens/tokens/: border-radius.json  color.json  shadows.json  spacing.json  typography.json
libs/ui-kit/src/: globals.css  index.ts  version.ts
libs/ui-kit/src/components/: index.ts
libs/ui-kit/src/components/Badge/: Badge.stories.tsx  Badge.tsx
libs/ui-kit/src/components/Badge/__tests__/: Badge.test.tsx
libs/ui-kit/src/components/Button/: Button.stories.tsx  Button.tsx
libs/ui-kit/src/components/Button/__tests__/: Button.test.tsx
libs/ui-kit/src/components/Card/: Card.stories.tsx  Card.tsx
libs/ui-kit/src/components/Card/__tests__/: Card.test.tsx
libs/ui-kit/src/components/CodeBlock/: CodeBlock.stories.tsx  CodeBlock.tsx
libs/ui-kit/src/components/CodeBlock/__tests__/: CodeBlock.test.tsx
libs/ui-kit/src/components/Dashboard/: Dashboard.test.tsx  DashboardGrid.tsx  MetricWidget.tsx  TimeSeriesChart.tsx  index.ts
libs/ui-kit/src/components/ErrorBoundary/: ErrorBoundary.tsx
libs/ui-kit/src/components/Input/: Input.stories.tsx  Input.tsx
libs/ui-kit/src/components/Input/__tests__/: Input.test.tsx
libs/ui-kit/src/components/Layout/: Layout.stories.tsx  Layout.tsx
libs/ui-kit/src/components/Layout/__tests__/: Layout.test.tsx
libs/ui-kit/src/components/LogViewer/: LogViewer.test.tsx  LogViewer.tsx
libs/ui-kit/src/components/SessionReplayPlayer/: index.tsx
libs/ui-kit/src/components/Spinner/: Spinner.stories.tsx  Spinner.tsx
libs/ui-kit/src/components/Spinner/__tests__/: Spinner.test.tsx
libs/ui-kit/src/components/Table/: Table.stories.tsx  Table.tsx
libs/ui-kit/src/components/Table/__tests__/: Table.test.tsx
libs/ui-kit/src/components/TraceWaterfall/: TraceWaterfall.stories.tsx  TraceWaterfall.tsx  index.ts
libs/ui-kit/src/components/TraceWaterfall/__tests__/: TraceWaterfall.test.tsx
libs/ui-kit/src/components/VisualQueryBuilder/: VisualQueryBuilder.tsx
libs/ui-kit/src/components/VisualQueryBuilder/__tests__/: VisualQueryBuilder.test.tsx
libs/ui-kit/src/icons/: index.ts
libs/ui-kit/src/theme/: ThemeProvider.tsx  ThemeToggle.tsx  index.ts
libs/ui-kit/src/theme/__tests__/: ThemeProvider.test.tsx
tools/: BUILD.bazel
